# one_way_communicator

./: AbstractBaseReceiver.h  AbstractBaseSender.h  ArgumentsGetter.h  CMakeLists.txt  CommonFrame.h  ControlFrame.h  FileWriter.h  Frame.h  FrameData.h  README.md  Receiver.h  Sender.h  receive.cpp  send.cpp
.github/workflows/: codeql.yml  msvc.yml
linux/: ReceiverLinux.h  SenderLinux.h
win/: ReceiverWin.h  SenderWin.h
